[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cqspoolterrain"
version = "1.3.0"
authors = [
  { name="James Adams", email="inklink28@gmail.com" }
]
description = "Python Library for building dome terrain"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

dependencies = [
'cqindustry @ git+https://github.com/medicationforall/cqindustry@0.1.1'
]


[project.urls]
"Homepage" = "https://github.com/medicationforall/cqspoolterrain"
"Bug Tracker" = "https://github.com/medicationforall/cqspoolterrain/issues"
